<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="android.rishat.myapplication.ui.home.HomeFragment"
        android:label="@string/title_map"
        tools:layout="@layout/activity_main" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="android.rishat.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_alarm"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="android.rishat.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_notifications" />
</navigation>